# ilc-agda

./: .gitignore  .travis.yml  ChangeContextLifting.agda  ChangeContexts.agda  Changes.agda  EverythingHeader.agda.inc  GenerateEverythingIlc.hs  HACKING.md  IlcModel.agda  ModalLogic.agda  Model.agda  PLDI14-List-of-Theorems.agda  PropsDelta.agda  README.agda  README.md  SymbolicDerivation.agda  TotalNaturalSemantics.agda  TotalTerms.agda  UNDEFINED.agda  agdaCheck.conf  agdaCheck.sh  agdaCheck.sh.conf.example  agdaConfParse.sh.inc  agdaGraph.sh  agdaHtml.sh  agdaRegen.sh  binding.agda  derivation.agda  generate-README.rb  ilc.cabal  incremental.agda  lambda.agda  meaning.agda  partial.agda  stack.yaml  total.agda
Base/: Ascription.agda  HetEqExtra.agda
Data/: NatBag.agda
Denotation/: Environment.agda  Notation.agda
Denotational/: Changes.agda  Closures.agda  Environment.agda  Environments.agda  EqualityLemmas.agda  Equivalence.agda  ExtensionalityPostulate.agda  Notation.agda  ValidChanges.agda  Values.agda  WeakValidChanges.agda
Examples/: Examples1.agda
Natural/: Evaluation.agda  Lookup.agda  Soundness.agda
New/: Changes.agda  Contexts.agda  Correctness.agda  Derive.agda  Equivalence.agda  FunctionLemmas.agda  Lang.agda  LangChanges.agda  LangOps.agda  NewNew.agda  Syntax.agda  Types.agda  Unused.agda
Postulate/: Bag-Nehemiah.agda  Bag-Popl14.agda  Extensionality.agda
Property/: Uniqueness.agda
Structure/: Tuples.agda
Syntactic/: ChangeContexts.agda  Changes.agda  Closures.agda  Context.agda  Contexts.agda  Types.agda
Syntax/: Context.agda  (+3 more)
(+191 files in other folders)
