name:            ilc
version:         0.1.0.0
cabal-version:   >= 1.8
build-type:      Simple
description:     Helper program for ILC, adapted from the Agda standard library.

executable GenerateEverythingIlc
  hs-source-dirs:   .
  main-is:          GenerateEverythingIlc.hs
  build-depends:    base >= 4.2 && < 4.8,
                    filemanip == 0.3.*,
                    filepath >= 1.1 && < 1.4
